--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="src\idlib\file_system\mapped_file_linux.cpp">
       <Filter>Source Files\file_system</Filter>
     </ClCompile>
+    <ClCompile Include="src\idlib\utility\swap_bytes.cpp">
+      <Filter>Source Files\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\idlib\DebugAssert.hpp">
@@ -546,6 +549,9 @@
     </ClInclude>
     <ClInclude Include="src\idlib\language\category_element.hpp">
       <Filter>Header Files\language</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\utility\swap_bytes.hpp">
+      <Filter>Header Files\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
