parsing expressions: Improve naming and typing
Proper naming of matches.
std::decay_t<T> is used for proper typing of matches.

--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -298,6 +298,7 @@
     <ClCompile Include="src\idlib\idlib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\idlib\parsing_expressions\match.hpp" />
     <ClInclude Include="src\idlib\parsing_expressions\any_sym.hpp" />
     <ClInclude Include="src\idlib\parsing_expressions\difference.hpp" />
     <ClInclude Include="src\idlib\parsing_expressions\internal\n_ary_expr.hpp" />
