--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -577,6 +577,9 @@
     <ClInclude Include="src\idlib\parsing_expressions\match.hpp">
       <Filter>Header Files\parsing_expressions</Filter>
     </ClInclude>
+    <ClInclude Include="src\idlib\parsing_expressions\internal\constructor_access_token.hpp">
+      <Filter>Header Files\parsing_expressions\internal</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\idlib\CurrentFunction.inline">
