--- a/idlib-tests.vcxproj
+++ b/idlib-tests.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="tests\idlib\tests\iterator\transform_iterator.cpp" />
     <ClCompile Include="tests\idlib\tests\parsing_expressions\any_sym.cpp" />
     <ClCompile Include="tests\idlib\tests\parsing_expressions\difference.cpp" />
     <ClCompile Include="tests\idlib\tests\parsing_expressions\repetition.cpp" />
@@ -66,6 +67,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tests\idlib\tests\color\color_generator.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tests\iterator\footer.in" />
+    <None Include="tests\iterator\header.in" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{53AA7468-E768-4CC9-A5ED-21A70C5FC36C}</ProjectGuid>
